fixed the todosCont overflow problem, used main

--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,6 @@
   }
 
   .section-global-container {
-    @apply flex flex-col w-full h-full items-start justify-start;
+    @apply flex flex-col w-full h-full items-start justify-start ml-5;
   }
 }
